<resources>
    <string name="app_name">StripeSpike</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="number">Number</string>
    <string name="ccnumber">Credit Card Number</string>
    <string name="year">YY</string>
    <string name="month">MM</string>
    <string name="CVC">CVC</string>
    <string name="pay">Pay</string>
</resources>
